tests/reference/asr-dfloat1-6063adb.stderr
semantic error: Argument of intrinsic must be an integer
 --> tests/errors/dfloat1.f90:3:10
  |
3 | print *, dfloat(y)
  |          ^^^^^^^^^ 
